--- a/app/pages/message/enquiry/enquiry.component.html
+++ b/app/pages/message/enquiry/enquiry.component.html
@@ -36,7 +36,8 @@
                                         [data]="enquiryService.enquiry.Messages" [enquiryId]="enquiryId"></dialog-cmp>
                         </div>
                         <div class="col-md-6">
-                            <property-info-cmp *ngIf="enquiryService.enquiry" [data]="enquiryService.enquiry.Enquiry"></property-info-cmp>
+                            <property-info-cmp *ngIf="enquiryService.enquiry"
+                                               [data]="enquiryService.enquiry.Enquiry"></property-info-cmp>
                             <div class="enquiry-body">
                                 <div class="row">
                                     <div class="col-xs-12">
