--- a/app/shared/components/sidebar/sidebar.component.html
+++ b/app/shared/components/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
         <div class="info">
             <a data-toggle="collapse" href="#collapseUser" class="collapsed">
                 <span>
-                    Tania Andrew
+                    {{getFullName()}}
                     <b class="caret"></b>
                 </span>
             </a>
