--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -158,6 +158,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .m-b-15 {
 	margin-bottom: 15px !important;
 }
+.m-b-30 {
+	margin-bottom: 30px !important;
+}
 .m-r-20 {
 	margin-right: 20px;
 }
