--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -161,11 +161,17 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .m-b-30 {
 	margin-bottom: 30px !important;
 }
+.m-r-10 {
+	margin-right: 10px;
+}
 .m-r-20 {
 	margin-right: 20px;
 }
 .m-r-25 {
 	margin-right: 25px;
+}
+.m-l-10 {
+	margin-left: 10px;
 }
 .m-l-r-20-negative {
 	margin-left: -20px;
@@ -181,12 +187,26 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .p-t-10 {
 	padding-top: 10px !important;
 }
+.p-l-5 {
+	padding-left: 5px !important;
+}
+.p-r-15 {
+	padding-right: 15px !important;
+}
 .p-b-none {
 	padding-bottom: 0px !important;
+}
+.p-l-r-10 {
+	padding-left: 10px !important;
+	padding-right: 10px !important;
 }
 .p-l-r-20 {
 	padding-left: 20px !important;
 	padding-right: 20px !important;
+}
+.p-l-r-30 {
+	padding-left: 30px !important;
+	padding-right: 30px !important;
 }
 .p-l-r-40 {
 	padding-left: 40px !important;
@@ -426,7 +446,16 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .messages-container .message-send .form-control {
 	background-image: none;
 }
-
+.normalize-datetitme .input-group .input-group-addon {
+	padding-left: 20px !important;
+	padding-right: 20px;
+}
+.normalize-datetitme:first-child .input-group {
+	padding-left: 5px;
+}
+.normalize-datetitme:last-child .input-group {
+	padding-right: 15px;
+}
 /**
  * Custom button
  */
