--- a/app/components/enquiry/proposal/proposal.component.html
+++ b/app/components/enquiry/proposal/proposal.component.html
@@ -165,7 +165,7 @@
 
 
 </div>
-<div [formGroup]="proposalForm" [hidden]="true">
+<div [formGroup]="proposalForm">
     <div class="enquiry-body">
         <div class="row">
             <div class="col-xs-12">
