--- a/app/pages/dashboard/dashboard.component.html
+++ b/app/pages/dashboard/dashboard.component.html
@@ -1,9 +1,6 @@
 <div class="main-content">
     <div class="container-fluid">
-        <button class="btn btn-success btn-raised" data-toggle="modal" data-target="#enquiry" (click)="openEnquiry({})">
-            Create
-        </button>
-        <button class="btn btn-success btn-raised" data-toggle="modal" data-target="#proposal">
+        <button class="btn btn-success btn-raised hidden" data-toggle="modal" data-target="#proposal">
             Create a Proposal
         </button>
         <div class="row filter" *ngIf="dashboardService.metadata.length">
