--- a/app/shared/components/header/header.component.html
+++ b/app/shared/components/header/header.component.html
@@ -13,9 +13,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand navbar-left title-page" [routerLink]="[activePage.path]">
-                <i class="material-icons">{{activePage.icon}}</i>
-                <span>{{activePage.title}}</span>
+            <a class="navbar-brand navbar-left title-page" [routerLink]="[activePage && activePage.path]">
+                <i class="material-icons">{{activePage && activePage.icon}}</i>
+                <span>{{activePage && activePage.title}}</span>
             </a>
         </div>
         <div class="collapse navbar-collapse">
