view page title

--- a/app/shared/components/header/header.component.html
+++ b/app/shared/components/header/header.component.html
@@ -15,7 +15,7 @@
             </button>
             <a class="navbar-brand navbar-left title-page" [routerLink]="[activePage && activePage.path]">
                 <i class="material-icons">{{activePage && activePage.icon}}</i>
-                <span>{{activePage && activePage.title}}</span>
+                <span>{{title}}</span>
             </a>
         </div>
         <div class="collapse navbar-collapse">
