--- a/app/components/tables/enquiries/enquiries.component.html
+++ b/app/components/tables/enquiries/enquiries.component.html
@@ -44,11 +44,12 @@
                     </cl-image>
                 </div>
             </td>
-            <td>{{ item.ToName }}</td>
-            <td>{{ item.PropertyName }} 06/12/17 - 06/15/17</td>
+            <td *ngIf="loginService.getRoles('Agent')">{{ item.ToName }}</td>
+            <td *ngIf="loginService.getRoles('Manager')">{{ item.FromName }}</td>
+            <td>{{ item.PropertyName }}</td>
             <td>{{ dateFormat(item.SentAt, 'D MMMM h:mmA') }}</td>
             <td>
-                <div class="enquiry-status">{{item.EnquiryStatusDesc}}</div>
+                <div class="enquiry-status1">{{item.EnquiryStatusDesc}}</div>
             </td>
             <td class="button-cell">
                 <button class="btn btn-simple btn-icon">
